# social

./: .gitignore  DESIGN.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: frontend.yml  test.yml
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
app/routes/: follows.py  users.py
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routes/: follows.py  posts.py  users.py
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/users/[username]/: page.tsx
frontend/src/components/: auth-gate.tsx  avatar.tsx  badge.tsx  button.tsx  combobox.tsx  dropdown.tsx  feed.tsx  follow-button.tsx  listbox.tsx  post-composer.tsx  sidebar-layout.tsx  table.tsx
src/app/(auth)/register/: page.tsx
src/components/: avatar.tsx  badge.tsx  button.tsx  checkbox.tsx  combobox.tsx  dropdown.tsx  input.tsx  listbox.tsx  radio.tsx  select.tsx  switch.tsx  table.tsx  textarea.tsx
tests/: conftest.py
tests/test_routes/: test_users.py
